--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     <!-- OG TAG -->
     <meta property="og:title" content="이승호포트폴리오" />
     <meta property="og:description" content="이승호 웹개발포트폴리오입니다." />
-    <meta property="og:image" content="./images/home/profile.jpg" />
+    <meta
+      property="og:image"
+      content="https://leeseungho77.github.io/portfolio-web/images/home/profile.jpg"
+    />
     <meta
       property="og:url"
       content="https://leeseungho77.github.io/portfolio-web/"
