--- a/index.html
+++ b/index.html
@@ -328,7 +328,13 @@
       <section id="contact" class="section contact">
         <h2 class="section__title">contact</h2>
         <div class="contact__container container">
-          <form class="contact__form" id="contactForm" action="">
+          <form
+            class="contact__form"
+            id="contactForm"
+            name="contactForm"
+            action="/test"
+            method="post"
+          >
             <input
               class="contact__input"
               type="text"
